public/babelbooapp/app.css
/* ... */
.cine > * {
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
}

.title-cine, .progress-cine {
    font-size:22px;
    font-weight: bold;
    margin-bottom: 5px;
}

.title-cine {
    color:#777;
}

player-card .cine {
    padding-top: 0px;
}

player-card .title-cine p {
    margin-top: 10px;
    margin-bottom: 10px;
}

.question-txt{
    font-size:22px;
    font-weight: bold;
    padding-top: 10px;
    margin-bottom: 0px;
    margin-top: 0px;
}

.player-container {
    width: 640px;
    height: 360px;
    background-color: #222;
    display: inline-block;
    margin-left: 20px;
    padding-left: 0px;
    padding-right: 0px;
}

.answer {
    margin-top: 0px;
    width: 100%;
    display: inline-block;
}

.answer ul {
    margin: 0px;
    margin-bottom: 5px;
}

.answer label {
    margin: 0px;
    color: #333;
    font-weight: normal;
}

.answer li {
    border-radius: 15px;
    padding: 2px 8px 2px 8px;
}

.answer li:hover {
    background-color: #ddd;
}

.selected-answer {
    background-color: #54ACD2;
}

.selected-answer:hover {
    background-color: #449CC2 !important;
}

.selected-answer label::after, .selected-answer label::before {
    border: 2px solid #fff !important;
    background-color: #fff !important;
}

.answer .radio {
    margin: 0px;
}

.answer .radio label {
    width: 100%;
}

.already-answered {
    color: #fff;
    font-size: 22px;
    text-align: center;
    background-color: #3c763d;
    padding: 20px;
    margin-top: 7px;
}

.already-answered .fa-check {
    font-size: 60px;
}

.nav-list {
    margin:15px 15px 75px 10px;
    padding:0px;
    font-size: 20px;
    font-weight: bold;
}

.nav-list a {
    text-decoration: none;
}

.answer-symbol {
    color: #fff;
    font-size: 122px;
    margin-right: 5px;
    float: right;
}

.button-player {
    text-transform: uppercase;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 15px;
    cursor: pointer;
    font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
    border: none;
    text-decoration: none;
    border-top: 1px solid #ddd;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    display: block;
}

.button-player:hover {
    background-color: #ddd;
    color: #428bca;
    text-decoration: none;
}

.button-player:focus {
    color: #428bca;
    text-decoration: none;
}

.cine-right, .cine-wrong, .selected-answer,
.cine-right label, .cine-wrong label, .selected-answer label {
    color: #fff !important;
}

.cine-right {
    background-color: #3c763d !important;
}

.cine-wrong {
    background-color: #a94442 !important;
}

.cine-wrong .fa-times, .cine-right .fa-check {
    color: #fff;
    margin-left: -20px;
    font-size: 18px;
    margin-left: -31px;
    padding-right: 12px;
}

.cine-right .fa-check {
    margin-right: -2px;
}

.cine-right .fa-times {
    margin-right: 2px;
}

.cine-right:hover {
    background-color: #2c662d !important;
}

.cine-wrong:hover {
    background-color: #993432 !important;
}

.button-player-disabled, .button-player-disabled:hover, .button-player-disabled:focus {
    color: #999;
    cursor: default;
    background-color: transparent;
    text-decoration: none;
}

.button-summary {
    width: 680px;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    float: left;
}


/*---------  PLAYER   --------*/
.player-controls {
    background-color: #54ACD2;
    color: #fff;
    padding-left: 22px;
    padding-right: 0px;
    margin-top: -5px;*
}

.video-progress {
    height: 7px;
    background-color: #ccc;
    margin-left: -22px;
    cursor: pointer;
}

.video-progress .bar {
    height: 100%;
    background-color: #00618C;
}

.player-controls i {
    font-size: 18px;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 40px;
    text-align: center;
}

.player-controls i:hover {
    color: #ddd;
    cursor: pointer;
}

.player-time {
    font-size: 11px;
    display: inline-block;
    float: right;
    margin-right: 15px;
    margin-top: 6px;
}

.label-hide::before, .label-hide::after {
    display: none;
}



.total-time {
    font-weight: bold;
}
/*---------  /PLAYER  --------*/


/*---------  RESULTS  --------*/
.score {
    margin:15px;
}

.container .myContainer {
    text-align: center;
}

.score-title {
    color:#00618C;
    margin-bottom: 20px;
}

.summary-medal {
    font-size: 190px;
    margin-top: -20px;
    margin-bottom: -20px;
}

.summary {
    color: #fff;
    font-size: 22px;
    text-align: center;
    background-color: #00618C;
    padding: 20px;
    margin-top: 7px;
}

.summary-progress {
    width: 105px;
    height: 105px;
    position: relative;
    display: inline-block;
    margin: 20px 10px 0px 10px;
    margin-left: 10px;
    margin-right: 10px;
    overflow: hidden;
    border-radius: 3px;
}

.summary-thumbnail {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;
}

.summary-thumbnail img {
    height: 105px;
    position: relative;
    left: 100%;
    margin-left: -200%;
}

.overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 10;
    color: #fff;
    background-color: rgba(50,50,50,0.3);
}

.skills{
    font-size: 25px;
    margin-top: 10px;
}

.total-score{
    color:#00618C;
    font-size: 30px;
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: 50px
}

.score-points{
    color:#FBA026;
}

.finish-video-btn{
    color:#fff;
    background-color:#00618C
}

/*---------    TV --------*/

.tv {
    width: 100%;
    position: absolute;
    top: 50px;
    bottom: 0px;
    z-index: -5;
    padding-top: 20px;
}

.tvwelcome {
    width: 400px;
}

.tvwelcome ul {
    text-align: justify;
}

.tvwelcome li {
    display: inline-block;
}

.tvwelcome ul:after {
    content: '';
    width: 100%; /* Ensures there are at least 2 lines of text, so justification works */
    display: inline-block;
}

.tvwelcome h3 {
    margin-bottom: 30px;
}
/* ... */

